--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <a href="src/tinyrenderer/index.html">Tinyrenderer</a>
+      <a href="src/tinyrenderer/lesson1/index.html">Tinyrenderer</a>
     </div>
   </body>
 </html>
