--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>WebGL</title>
   </head>
   <body>
     <div id="app">
-      <a href="src/tinyrenderer/lesson1/index.html">Tinyrenderer</a>
+      <a href="src/tinyrenderer/index.html">Tinyrenderer</a>
     </div>
   </body>
 </html>
