render model with light

--- a/src/tinyrenderer/lesson2/index.html
+++ b/src/tinyrenderer/lesson2/index.html
@@ -20,7 +20,7 @@
       max-width: 1000px;
       object-fit: contain;
       transform: scaleY(-1);
-      background-color: white;
+      background-color: black;
     }
   </style>
   <script src="./main.ts" defer type="module"></script>
