split lessons 2 and 3

--- a/src/tinyrenderer/index.html
+++ b/src/tinyrenderer/index.html
@@ -9,5 +9,6 @@
 <body>
   <a href="./lesson1/index.html">Lesson 1</a>
   <a href="./lesson2/index.html">Lesson 2</a>
+  <a href="./lesson3/index.html">Lesson 2</a>
 </body>
 </html>
