--- a/src/tinyrenderer/lesson3/index.html
+++ b/src/tinyrenderer/lesson3/index.html
@@ -10,6 +10,7 @@
     body {
       display: flex;
       justify-content: center;
+      flex-wrap: wrap;
       margin: 0;
       position: 'relative';
       background-color: lightblue;
@@ -27,6 +28,7 @@
 </head>
 <body>
   <canvas></canvas>
+  <canvas id="texture"></canvas>
 </body>
 
 </html>
