--- a/src/tinyrenderer/lesson3/index.html
+++ b/src/tinyrenderer/lesson3/index.html
@@ -22,6 +22,10 @@
       object-fit: contain;
       transform: scaleY(-1);
       background-color: black;
+
+      /* default is to smooth edges of pixels on canvas */
+      image-rendering: pixelated;
+      image-rendering: crisp-edges;
     }
   </style>
   <script src="./main.ts" defer type="module"></script>
