--- a/src/tinyrenderer/lesson4/index.html
+++ b/src/tinyrenderer/lesson4/index.html
@@ -13,7 +13,7 @@
       flex-wrap: wrap;
       margin: 0;
       position: 'relative';
-      background-color: lightblue;
+      background-color: black;
     }
 
     canvas {
@@ -22,6 +22,7 @@
       object-fit: contain;
       transform: scaleY(-1);
       background-color: black;
+      margin-top: 1rem;
 
       /* default is to smooth edges of pixels on canvas */
       image-rendering: pixelated;
@@ -32,7 +33,6 @@
 </head>
 <body>
   <canvas></canvas>
-  <canvas id="texture"></canvas>
 </body>
 
 </html>
