--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="app">
       <a href="src/tinyrenderer/index.html">Tinyrenderer</a>
-      <a href="src/webglfundamentals/index.html">WebGL Fundamentals</a>
+      <a href="src/webgl2fundamentals/index.html">WebGL2 Fundamentals</a>
     </div>
   </body>
 </html>
