--- a/src/webgl2fundamentals/index.html
+++ b/src/webgl2fundamentals/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebGL Fundamentals</title>
+  <title>WebGL2 Fundamentals</title>
 </head>
 <body>
-  <a href="./fundamentals/index.html">WebGL Fundamentals</a>
+  <a href="./fundamentals/index.html">Fundamentals</a>
 </body>
 </html>
