render plain image to canvas via webgl

--- a/src/webgl2fundamentals/index.html
+++ b/src/webgl2fundamentals/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <a href="./fundamentals/index.html">Fundamentals</a>
+  <a href="./how_it_works/index.html">How It Works</a>
 </body>
 </html>
