implement some image convolutions

--- a/src/webgl2fundamentals/index.html
+++ b/src/webgl2fundamentals/index.html
@@ -9,5 +9,8 @@
 <body>
   <a href="./fundamentals/index.html">Fundamentals</a>
   <a href="./how_it_works/index.html">How It Works</a>
+  <a href="./render_plain_image/index.html">Render Plain Image</a>
+  <a href="./guassian_blur/index.html">Gaussian Blur</a>
+  <a href="./color_filter_with_animation/index.html">Color Filter With Animation</a>
 </body>
 </html>
