--- a/src/webglfundamentals/2d_transformations/index.html
+++ b/src/webglfundamentals/2d_transformations/index.html
@@ -60,7 +60,15 @@
     </label>
     <label>
       Rotation (radians)
-      <input type="range" id="rotation" min="-6.28" max="6.28" step="0.01" value="0">
+      <input type="range" id="rotate" min="-6.28" max="6.28" step="0.01" value="0">
+    </label>
+    <label>
+      Origin X
+      <input type="range" id="origin-x" min="-1" max="1" step="0.01" value="0">
+    </label>
+    <label>
+      Origin Y
+      <input type="range" id="origin-y" min="-1" max="1" step="0.01" value="0">
     </label>
   </div>
 </body>
