--- a/src/webglfundamentals/index.html
+++ b/src/webglfundamentals/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <a href="./2d_transformations/index.html">2D Transformations</a>
+  <a href="./orthographic_3d/index.html">Orthographic 3D</a>
 </body>
 </html>
