load 3d f with random colors

--- a/src/webglfundamentals/orthographic_3d/index.html
+++ b/src/webglfundamentals/orthographic_3d/index.html
@@ -51,6 +51,10 @@
       <input type="range" id="scale-y" min="-2" max="2" step="0.01" value="1">
     </label>
     <label>
+      Scale Z
+      <input type="range" id="scale-z" min="-2" max="2" step="0.01" value="1">
+    </label>
+    <label>
       Translate X
       <input type="range" id="translate-x" min="-2" max="2" step="0.01" value="0">
     </label>
@@ -59,8 +63,20 @@
       <input type="range" id="translate-y" min="-2" max="2" step="0.01" value="0">
     </label>
     <label>
-      Rotation (radians)
-      <input type="range" id="rotate" min="-6.28" max="6.28" step="0.01" value="0">
+      Translate Z
+      <input type="range" id="translate-z" min="-2" max="2" step="0.01" value="0">
+    </label>
+    <label>
+      Rotate X
+      <input type="range" id="rotate-x" min="-6.28" max="6.28" step="0.01" value="0">
+    </label>
+    <label>
+      Rotate Y
+      <input type="range" id="rotate-y" min="-6.28" max="6.28" step="0.01" value="0">
+    </label>
+    <label>
+      Rotate Z
+      <input type="range" id="rotate-z" min="-6.28" max="6.28" step="0.01" value="0">
     </label>
     <label>
       Origin X
@@ -69,6 +85,10 @@
     <label>
       Origin Y
       <input type="range" id="origin-y" min="-1" max="1" step="0.01" value="0">
+    </label>
+    <label>
+      Origin Z
+      <input type="range" id="origin-z" min="-1" max="1" step="0.01" value="0">
     </label>
   </div>
 </body>
