--- a/src/webglfundamentals/2d_transformations/index.html
+++ b/src/webglfundamentals/2d_transformations/index.html
@@ -44,19 +44,19 @@
   <div class="input-container">
     <label>
       Scale X
-      <input type="range" id="scale-x" min="-2" max="2" step="0.01" value="1">
+      <input type="range" id="scaleX" min="-2" max="2" step="0.01" value="1">
     </label>
     <label>
       Scale Y
-      <input type="range" id="scale-y" min="-2" max="2" step="0.01" value="1">
+      <input type="range" id="scaleY" min="-2" max="2" step="0.01" value="1">
     </label>
     <label>
       Translate X
-      <input type="range" id="translate-x" min="-2" max="2" step="0.01" value="0">
+      <input type="range" id="translateX" min="-2" max="2" step="0.01" value="0">
     </label>
     <label>
       Translate Y
-      <input type="range" id="translate-y" min="-2" max="2" step="0.01" value="0">
+      <input type="range" id="translateY" min="-2" max="2" step="0.01" value="0">
     </label>
     <label>
       Rotation (radians)
@@ -64,11 +64,11 @@
     </label>
     <label>
       Origin X
-      <input type="range" id="origin-x" min="-1" max="1" step="0.01" value="0">
+      <input type="range" id="originX" min="-1" max="1" step="0.01" value="0">
     </label>
     <label>
       Origin Y
-      <input type="range" id="origin-y" min="-1" max="1" step="0.01" value="0">
+      <input type="range" id="originY" min="-1" max="1" step="0.01" value="0">
     </label>
   </div>
 </body>
