--- a/src/webglfundamentals/orthographic_3d/index.html
+++ b/src/webglfundamentals/orthographic_3d/index.html
@@ -44,51 +44,51 @@
   <div class="input-container">
     <label>
       Scale X
-      <input type="range" id="scaleX" min="-2" max="2" step="0.01" value="1">
+      <input type="range" id="scaleX" min="-2" max="2" step="0.01">
     </label>
     <label>
       Scale Y
-      <input type="range" id="scaleY" min="-2" max="2" step="0.01" value="1">
+      <input type="range" id="scaleY" min="-2" max="2" step="0.01">
     </label>
     <label>
       Scale Z
-      <input type="range" id="scaleZ" min="-2" max="2" step="0.01" value="1">
+      <input type="range" id="scaleZ" min="-2" max="2" step="0.01">
     </label>
     <label>
       Translate X
-      <input type="range" id="translateX" min="-2" max="2" step="0.01" value="0">
+      <input type="range" id="translateX" min="-2" max="2" step="0.01">
     </label>
     <label>
       Translate Y
-      <input type="range" id="translateY" min="-2" max="2" step="0.01" value="0">
+      <input type="range" id="translateY" min="-2" max="2" step="0.01">
     </label>
     <label>
       Translate Z
-      <input type="range" id="translateZ" min="-2" max="2" step="0.01" value="0">
+      <input type="range" id="translateZ" min="-2" max="2" step="0.01">
     </label>
     <label>
       Rotate X
-      <input type="range" id="rotateX" min="-6.28" max="6.28" step="0.01" value="0">
+      <input type="range" id="rotateX" min="-6.28" max="6.28" step="0.01">
     </label>
     <label>
       Rotate Y
-      <input type="range" id="rotateY" min="-6.28" max="6.28" step="0.01" value="0">
+      <input type="range" id="rotateY" min="-6.28" max="6.28" step="0.01">
     </label>
     <label>
       Rotate Z
-      <input type="range" id="rotateZ" min="-6.28" max="6.28" step="0.01" value="0">
+      <input type="range" id="rotateZ" min="-6.28" max="6.28" step="0.01">
     </label>
     <label>
       Origin X
-      <input type="range" id="originX" min="-1" max="1" step="0.01" value="0">
+      <input type="range" id="originX" min="-1" max="1" step="0.01">
     </label>
     <label>
       Origin Y
-      <input type="range" id="originY" min="-1" max="1" step="0.01" value="0">
+      <input type="range" id="originY" min="-1" max="1" step="0.01">
     </label>
     <label>
       Origin Z
-      <input type="range" id="originZ" min="-1" max="1" step="0.01" value="0">
+      <input type="range" id="originZ" min="-1" max="1" step="0.01">
     </label>
   </div>
 </body>
