--- a/src/webglfundamentals/3d_perspective/index.html
+++ b/src/webglfundamentals/3d_perspective/index.html
@@ -90,6 +90,18 @@
       Origin Z
       <input type="range" id="originZ" min="-1" max="1" step="0.01">
     </label>
+    <label>
+      Z Near
+      <input type="range" id="zNear" min="1" max="1200" step="0.01">
+    </label>
+    <label>
+      Z Far
+      <input type="range" id="zFar" min="1" max="2500" step="0.01">
+    </label>
+    <label>
+      Field Of View (Degrees)
+      <input type="range" id="fieldOfView" min="1" max="150" step="0.01">
+    </label>
   </div>
 </body>
 
