--- a/src/webglfundamentals/index.html
+++ b/src/webglfundamentals/index.html
@@ -9,5 +9,7 @@
 <body>
   <a href="./2d_transformations/index.html">2D Transformations</a>
   <a href="./orthographic_3d/index.html">Orthographic 3D</a>
+  <a href="./3d_perspective/index.html">3D Perspective</a>
+  <a href="./rotating_f/index.html">Rotating F</a>
 </body>
 </html>
