add camera rotation and distance

--- a/src/webglfundamentals/index.html
+++ b/src/webglfundamentals/index.html
@@ -11,5 +11,6 @@
   <a href="./orthographic_3d/index.html">Orthographic 3D</a>
   <a href="./3d_perspective/index.html">3D Perspective</a>
   <a href="./rotating_f/index.html">Rotating F</a>
+  <a href="./3d_camera/index.html">3D Camera</a>
 </body>
 </html>
