--- a/src/webglfundamentals/3d_camera/index.html
+++ b/src/webglfundamentals/3d_camera/index.html
@@ -16,9 +16,8 @@
     }
 
     canvas {
-      width: 100vmin;
-      max-width: 1000px;
-      object-fit: contain;
+      width: 100vw;
+      height: 100vh;
     }
 
     .input-container {
@@ -92,11 +91,11 @@
     </label>
     <label>
       Z Near
-      <input type="range" id="zNear" min="1" max="1200" step="0.01">
+      <input type="range" id="zNear" min="0.1" max="25" step="0.01">
     </label>
     <label>
       Z Far
-      <input type="range" id="zFar" min="1" max="2500" step="0.01">
+      <input type="range" id="zFar" min="10" max="2500" step="0.01">
     </label>
     <label>
       Field Of View (Degrees)
@@ -107,8 +106,16 @@
       <input type="range" id="cameraAngle" min="-360" max="360" step="0.01">
     </label>
     <label>
-      Camera Distance
-      <input type="range" id="cameraDistance" min="0" max="10" step="0.01">
+      Camera X
+      <input type="range" id="cameraX" min="-10" max="10" step="0.01">
+    </label>
+    <label>
+      Camera Y
+      <input type="range" id="cameraY" min="-10" max="10" step="0.01">
+    </label>
+    <label>
+      Camera Z
+      <input type="range" id="cameraZ" min="-10" max="10" step="0.01">
     </label>
   </div>
 </body>
