--- a/src/webglfundamentals/3d_camera/index.html
+++ b/src/webglfundamentals/3d_camera/index.html
@@ -24,6 +24,8 @@
       position: absolute;
       z-index: 1;
       width: 200px;
+      max-height: calc(100vh - 4rem);
+      overflow-y: scroll;
       top: 0;
       left: 0;
       background-color: #0002;
@@ -34,6 +36,11 @@
     input[type=range] {
       display: block;
       width: 100%;
+    }
+
+    .margin-bottom {
+      display: block;
+      margin-bottom: 2rem;
     }
   </style>
 </head>
@@ -49,7 +56,7 @@
       Scale Y
       <input type="range" id="scaleY" min="-2" max="2" step="0.01">
     </label>
-    <label>
+    <label class="margin-bottom">
       Scale Z
       <input type="range" id="scaleZ" min="-2" max="2" step="0.01">
     </label>
@@ -61,7 +68,7 @@
       Translate Y
       <input type="range" id="translateY" min="-2" max="2" step="0.01">
     </label>
-    <label>
+    <label class="margin-bottom">
       Translate Z
       <input type="range" id="translateZ" min="-10" max="2" step="0.01">
     </label>
@@ -73,7 +80,7 @@
       Rotate Y
       <input type="range" id="rotateY" min="-0" max="360" step="0.01">
     </label>
-    <label>
+    <label  class="margin-bottom">
       Rotate Z
       <input type="range" id="rotateZ" min="-0" max="360" step="0.01">
     </label>
@@ -85,7 +92,7 @@
       Origin Y
       <input type="range" id="originY" min="-1" max="1" step="0.01">
     </label>
-    <label>
+    <label class="margin-bottom">
       Origin Z
       <input type="range" id="originZ" min="-1" max="1" step="0.01">
     </label>
