making follow_mouse WIP

--- a/src/webglfundamentals/index.html
+++ b/src/webglfundamentals/index.html
@@ -12,5 +12,6 @@
   <a href="./3d_perspective/index.html">3D Perspective</a>
   <a href="./rotating_f/index.html">Rotating F</a>
   <a href="./3d_camera/index.html">3D Camera</a>
+  <a href="./follow_mouse/index.html">Follow Mouse</a>
 </body>
 </html>
