basic example working

--- a/src/examples/strange_attractor/index.html
+++ b/src/examples/strange_attractor/index.html
@@ -54,6 +54,10 @@
   <canvas></canvas>
   <div class="input-container">
     <label>
+      Change in time
+      <input type="range" id="dt" min="0" max="0.02" step="0.0001">
+    </label>
+    <label>
       Rotate Camera X
       <input type="range" id="rotateCameraX" min="-360" max="360" step="0.01">
     </label>
