add reset button, increase particles

--- a/src/examples/strange_attractor/index.html
+++ b/src/examples/strange_attractor/index.html
@@ -53,6 +53,9 @@
 <body>
   <canvas></canvas>
   <div class="input-container">
+    <button type="button" id="#reset" class="margin-bottom">
+      Reset
+    </button>
     <label>
       Change in time
       <input type="range" id="dt" min="0" max="0.02" step="0.0001">
