--- a/src/examples/strange_attractor/index.html
+++ b/src/examples/strange_attractor/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2D Transformations</title>
+  <title>Particles</title>
   <script src="main.ts" defer type="module"></script>
   <style>
     body {
@@ -13,6 +13,8 @@
       justify-content: center;
       margin: 0;
       position: 'relative';
+      background-color: black;
+      font-family: 'Roboto', sans-serif;
     }
 
     canvas {
@@ -35,7 +37,14 @@
     }
 
     label {
+      display: block;
       color: white;
+      margin: 1rem auto;
+    }
+
+    label p {
+      display: inline-block;
+      margin: 0 1rem;
     }
 
     input[type=range] {
@@ -47,103 +56,32 @@
       display: block;
       margin-bottom: 2rem;
     }
+
+    #loading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 24px;
+      width: fit-content;
+      max-width: 95%;
+      max-height: 95%;
+      overflow-y: scroll;
+      color: white;
+    }
   </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <p id="loading">Loading...</p>
   <canvas></canvas>
   <div class="input-container">
     <button type="button" id="#reset" class="margin-bottom">
-      Reset
+      Reset Particles
     </button>
-    <label>
-      Change in time
-      <input type="range" id="dt" min="0" max="0.02" step="0.0001">
-    </label>
-    <label>
-      Rotate Camera X
-      <input type="range" id="rotateCameraX" min="-360" max="360" step="0.01">
-    </label>
-    <label>
-      Rotate Camera Y
-      <input type="range" id="rotateCameraY" min="-360" max="360" step="0.01">
-    </label>
-    <label class="margin-bottom">
-      Rotate Camera Z
-      <input type="range" id="rotateCameraZ" min="-360" max="360" step="0.01">
-    </label>
-    <label>
-      Move Camera X
-      <input type="range" id="moveCameraX" min="-10" max="10" step="0.01">
-    </label>
-    <label>
-      Move Camera Y
-      <input type="range" id="moveCameraY" min="-10" max="10" step="0.01">
-    </label>
-    <label class="margin-bottom">
-      Move Camera Z
-      <input type="range" id="moveCameraZ" min="-10" max="10" step="0.01">
-    </label>
-    <label>
-      Rotate X
-      <input type="range" id="rotateX" min="-0" max="360" step="0.01">
-    </label>
-    <label>
-      Rotate Y
-      <input type="range" id="rotateY" min="-0" max="360" step="0.01">
-    </label>
-    <label class="margin-bottom">
-      Rotate Z
-      <input type="range" id="rotateZ" min="-0" max="360" step="0.01">
-    </label>
-    <label>
-      Translate X
-      <input type="range" id="translateX" min="-2" max="2" step="0.01">
-    </label>
-    <label>
-      Translate Y
-      <input type="range" id="translateY" min="-2" max="2" step="0.01">
-    </label>
-    <label class="margin-bottom">
-      Translate Z
-      <input type="range" id="translateZ" min="-10" max="2" step="0.01">
-    </label>
-    <label>
-      Scale X
-      <input type="range" id="scaleX" min="-2" max="2" step="0.01">
-    </label>
-    <label>
-      Scale Y
-      <input type="range" id="scaleY" min="-2" max="2" step="0.01">
-    </label>
-    <label class="margin-bottom">
-      Scale Z
-      <input type="range" id="scaleZ" min="-2" max="2" step="0.01">
-    </label>
-    <label>
-      Origin X
-      <input type="range" id="originX" min="-1" max="1" step="0.01">
-    </label>
-    <label>
-      Origin Y
-      <input type="range" id="originY" min="-1" max="1" step="0.01">
-    </label>
-    <label class="margin-bottom">
-      Origin Z
-      <input type="range" id="originZ" min="-1" max="1" step="0.01">
-    </label>
-    <label>
-      Z Near
-      <input type="range" id="zNear" min="0.1" max="25" step="0.01">
-    </label>
-    <label>
-      Z Far
-      <input type="range" id="zFar" min="10" max="2500" step="0.01">
-    </label>
-    <label class="margin-bottom">
-      Field Of View (Degrees)
-      <input type="range" id="fieldOfView" min="1" max="150" step="0.01">
-    </label>
   </div>
 </body>
 
