add screenshot button

--- a/src/examples/strange_attractor/index.html
+++ b/src/examples/strange_attractor/index.html
@@ -81,6 +81,7 @@
   <div class="input-container">
     <button type="button" id="reset-particles" class="margin-bottom">Reset Particles</button>
     <button type="button" id="reset-everything" class="margin-bottom">Reset Everything</button>
+    <button type="button" id="save-image" class="margin-bottom">Save Image</button>
   </div>
 </body>
 
