--- a/src/examples/strange_attractor/index.html
+++ b/src/examples/strange_attractor/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Particles</title>
-  <script src="main.ts" defer type="module"></script>
+  <script src="./main.ts" defer type="module"></script>
   <style>
     body {
       display: flex;
