--- a/src/examples/strange_attractor/index.html
+++ b/src/examples/strange_attractor/index.html
@@ -73,7 +73,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="/assets/strangeAttractors.cce37830.js"></script>
+  <script type="module" crossorigin src="https://austintheriot.github.io/webgl-demos/assets/strangeAttractors.cce37830.js"></script>
 </head>
 
 <body>
