--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </p>
     <a href="https://austintheriot.github.io/webgl-demos/src/examples/strange_attractor/index.html"
       class="demo-link">Live Demo</a>
-    <a href="./images/particles.png">
-      <img src="./images/particles.png" />
+    <a href="/particles.png">
+      <img src="/particles.png" />
     </a>
   </div>
 </body>
