--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <h2>Interpolating Strange Attractors</h2>
     <p>The term "strange attractor" is sometimes used in mathematics to describe a chaotic system that seems to be
       attracted to an ideal behavior. In this project, I was interested in what would happen if I combined multiple
-      chaotic particle systems together by providing sliders to interpolate between the various systems. You can give a
-      "weight" to each system by increasing or decreasing its slider. Check out the live demo and see what interesting
-      patterns you can create. Use WASD keys or drag/touch to rotate. Scroll mousewheel to zoom in and out.
+      chaotic particle systems together. In the demo, you can give a "weight" to each system by increasing or decreasing
+      its slider. Check out the live demo and see what interesting patterns you can create. Use WASD keys or drag/touch
+      to rotate. Scroll mousewheel to zoom in and out.
     </p>
     <a href="https://austintheriot.github.io/webgl-demos/src/examples/strange_attractor/index.html"
       class="demo-link">Live Demo</a>
