update index.html and readme

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
 <body>
   <div class="container">
-    <h1>webgl-demos</h1>
+    <a href="https://github.com/austintheriot/webgl-demos">
+      <h1>webgl-demos</h1>
+    </a>
     <h2>About</h2>
     <p>This website is a space for displaying some of my endeavors into WebGL, WebGL2, and other general
       computer graphics technologies and concepts.</p>
