--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
 <body>
   <div class="container">
-    <h1>webgl-demos</h1>
+    <a href="https://github.com/austintheriot/webgl-demos">
+      <h1>webgl-demos</h1>
+    </a>
     <h2>About</h2>
     <p>This website is a space for displaying some of my endeavors into WebGL, WebGL2, and other general
       computer graphics technologies and concepts.</p>
@@ -62,7 +64,7 @@
       its slider. Check out the live demo and see what interesting patterns you can create. Use WASD keys or drag/touch
       to rotate. Scroll mousewheel to zoom in and out.
     </p>
-    <a href="https://austintheriot.github.io/webgl-demos/src/examples/strange_attractor/index.html"
+    <a href="https://austintheriot.github.io/webgl-demos/src/demos/strange_attractor/index.html"
       class="demo-link">Live Demo</a>
     <a href="/particles.png">
       <img src="https://austintheriot.github.io/webgl-demos/particles.png" />
