rename message indicator

--- a/src/demos/parametric_equations/index.html
+++ b/src/demos/parametric_equations/index.html
@@ -58,7 +58,7 @@
       margin-bottom: 1rem;
     }
 
-    #loading {
+    #message {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-  <p id="loading">Loading...</p>
+  <p id="message">Loading...</p>
   <canvas></canvas>
   <div class="input-container">
     <button type="button" id="reset-particles" class="margin-bottom">Reset Particles</button>
