--- a/src/demos/parametric_equations/index.html
+++ b/src/demos/parametric_equations/index.html
@@ -80,8 +80,7 @@
   <p id="message">Loading...</p>
   <canvas></canvas>
   <div class="input-container">
-    <button type="button" id="reset-particles" class="margin-bottom">Reset Particles</button>
-    <button type="button" id="reset-everything" class="margin-bottom">Reset Everything</button>
+    <button type="button" id="reset-everything" class="margin-bottom">Reset</button>
     <button type="button" id="save-image" class="margin-bottom">Save Image</button>
   </div>
 </body>
