--- a/src/demos/parametric_equations/index.html
+++ b/src/demos/parametric_equations/index.html
@@ -74,7 +74,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="https://austintheriot.github.io/webgl-demos/assets/parametricEquations.46c49b78.js"></script>
+  <script type="module" crossorigin src="https://austintheriot.github.io/webgl-demos/assets/parametricEquations.2bac23e8.js"></script>
   <link rel="modulepreload" href="https://austintheriot.github.io/webgl-demos/assets/index.b6be8b9a.js">
 </head>
 
@@ -82,7 +82,8 @@
   <p id="message">Loading...</p>
   <canvas></canvas>
   <div class="input-container">
-    <button type="button" id="reset-everything" class="margin-bottom">Reset</button>
+    <button type="button" id="reset-camera" class="margin-bottom">Reset Camera</button>
+    <button type="button" id="reset-everything" class="margin-bottom">Reset Everything</button>
     <button type="button" id="save-image" class="margin-bottom">Save Image</button>
   </div>
 </body>
