fix rotation direction, add set all to 1 button

--- a/src/demos/parametric_equations/index.html
+++ b/src/demos/parametric_equations/index.html
@@ -150,6 +150,7 @@
   <div class="input-container menu-closed" aria-hidden="true">
     <button type="button" id="reset-camera" class="margin-bottom">Reset Camera</button>
     <button type="button" id="reset-everything" class="margin-bottom">Reset Everything</button>
+    <button type="button" id="reset-to-1" class="margin-bottom">Set All To 1</button>
     <button type="button" id="save-image" class="margin-bottom">Save Image</button>
   </div>
 </body>
