--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </p>
     <a href="https://austintheriot.github.io/webgl-demos/src/demos/parametric_equations/index.html" class="demo-link">Live
       Demo</a>
-    <a href="/parametric_equations.png">
+    <a href="/webgl-demos/parametric_equations.png">
       <img src="https://austintheriot.github.io/webgl-demos/parametric_equations.png" />
     </a>
     <h2>Interpolating Strange Attractors</h2>
@@ -105,8 +105,8 @@
     </p>
     <a href="https://austintheriot.github.io/webgl-demos/src/demos/strange_attractor/index.html" class="demo-link">Live
       Demo</a>
-    <a href="/particles.png">
-      <img src="https://austintheriot.github.io/webgl-demos/particles.png" />
+    <a href="/webgl-demos/strange_attractor.png">
+      <img src="https://austintheriot.github.io/webgl-demos/strange_attractor.png" />
     </a>
   </div>
 </body>
