--- a/src/webglfundamentals/3d_camera_movement/index.html
+++ b/src/webglfundamentals/3d_camera_movement/index.html
@@ -18,12 +18,68 @@
     canvas {
       width: 100vw;
       height: 100vh;
+      cursor: none;
+    }
+
+    #backdrop {
+      z-index: 1;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: #0003;
+    }
+
+    #message {
+      z-index: 2;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: white;
+      width: fit-content;
+      max-width: 95%;
+      padding: 3rem;
+      border-radius: 24px;
+    }
+
+    #enable {
+      width: fit-content;
+      display: block;
+      margin: 2rem auto;
+      padding: 1rem 2rem;
+      border-radius: 24px;
+      outline: 0;
+      border: 0;
+      box-shadow: none;
+      background-color: #ddd;
+      cursor: pointer;
+      transition: background-color 0.1s;
+    }
+
+    #enable:hover {
+      background-color: #ccc;
+    }
+
+    #enable:active {
+      background-color: #bbb;
+    }
+
+    .hide {
+      display: none;
     }
   </style>
 </head>
 
 <body>
   <canvas></canvas>
+  <div id="backdrop">
+    <p id="message">
+      Please enable first-person viewing mode
+      <button id="enable">Enable</button>
+    </p>
+  </div>
 </body>
 
 </html>
